# controllers/user.js
@@ -1,9 +1,9 @@
 const mongodb = require('../db/connect');
 const ObjectId = require('mongodb').ObjectId;
 
-const getAllData = async(req, res) => {
+const getAllUser = async(req, res) => {
     try {
-        const result = await mongodb.getDb().db().collection('contacts').find();
+        const result = await mongodb.getDb().db('Project_week_5_to_8').collection('Users').find();
         result.toArray().then((lists) => {
             res.setHeader('Content-Type', 'application/json');
             res.status(200).json(lists);
@@ -13,14 +13,10 @@ const getAllData = async(req, res) => {
     }
 };
 
-const getSingleData = async(req, res) => {
+const getSingleUser = async(req, res) => {
     try {
         const userId = new ObjectId(req.params.id);
-        const result = await mongodb
-            .getDb()
-            .db()
-            .collection('contacts')
-            .find({ _id: userId });
+        const result = await mongodb.getDb().db('Project_week_5_to_8').collection('Users').find({ _id: userId });
         result.toArray().then((lists) => {
             res.setHeader('Content-Type', 'application/json');
             res.status(200).json(lists[0]);
@@ -30,42 +26,44 @@ const getSingleData = async(req, res) => {
     }
 };
 
-const createContact = async(req, res) => {
+const createUser = async(req, res) => {
     try {
-        const contact = {
+        const user = {
             firstName: req.body.firstName,
             lastName: req.body.lastName,
+            userName: req.body.userName,
             email: req.body.email,
-            favoriteColor: req.body.favoriteColor,
-            birthday: req.body.birthday
+            password: req.body.password
+
         };
-        const response = await mongodb.getDb().db().collection('contacts').insertOne(contact);
+        const response = await mongodb.getDb().db('Project_week_5_to_8').collection('Users').insertOne(user);
         if (response.acknowledged) {
             res.status(201).json(response);
         } else {
-            res.status(500).json(response.error || 'Some error occurred while creating the contact.');
+            res.status(500).json(response.error || 'Some error occurred while creating the user.');
         }
     } catch (err) {
         res.status(500).json(err);
     }
 };
 
-const updateContact = async(req, res) => {
+const updateUser = async(req, res) => {
     try {
         const userId = new ObjectId(req.params.id);
         // be aware of updateOne if you only want to update specific fields
-        const contact = {
+        const user = {
             firstName: req.body.firstName,
             lastName: req.body.lastName,
+            userName: req.body.userName,
             email: req.body.email,
-            favoriteColor: req.body.favoriteColor,
-            birthday: req.body.birthday
+            password: req.body.password
+
         };
         const response = await mongodb
             .getDb()
-            .db()
-            .collection('contacts')
-            .replaceOne({ _id: userId }, contact);
+            .db('Project_week_5_to_8')
+            .collection('Users')
+            .replaceOne({ _id: userId }, user);
         console.log(response);
         if (response.modifiedCount > 0) {
             res.status(204).send();
@@ -77,10 +75,10 @@ const updateContact = async(req, res) => {
     }
 };
 
-const deleteContact = async(req, res) => {
+const deleteUser = async(req, res) => {
     try {
         const userId = new ObjectId(req.params.id);
-        const response = await mongodb.getDb().db().collection('contacts').deleteOne({ _id: userId }, true);
+        const response = await mongodb.getDb().db('Project_week_5_to_8').collection('Users').deleteOne({ _id: userId }, true);
         console.log(response);
         if (response.deletedCount > 0) {
             res.status(204).send();
@@ -93,9 +91,9 @@ const deleteContact = async(req, res) => {
 };
 
 module.exports = {
-    getAllData,
-    getSingleData,
-    createContact,
-    updateContact,
-    deleteContact
+    getAllUser,
+    getSingleUser,
+    createUser,
+    updateUser,
+    deleteUser
 };
