# routes/index.js
@@ -1,16 +1,23 @@
-/* eslint-disable no-undef */
-const routes = require('express').Router();
-const contacts = require('./contacts');
+const express = require('express');
+const router = express.Router();
+const userRoute = require('./user');
+const productRoute = require('./product');
 const swagger = require('./swagger');
 
-routes.use('/', swagger);
-routes.use('/contacts', contacts);
-routes.use('/',
+router.use('/', swagger);
+
+router.use('/Users', userRoute);
+
+router.use('/Products', productRoute);
+
+router.use(
+    '/',
     (docData = (req, res) => {
         let docData = {
-            RenderURL: 'https://project-week-4-api-documentation-uh0m.onrender.com',
+            RenderURL: 'https://.onrender.com',
         };
         res.send(docData);
-    }));
+    })
+);
 
-module.exports = routes;
+module.exports = router;
